@@ -1,5 +1,8 @@
 2021-03-07  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/dependency/Resolver.java:
+	Quietly enforce only one SLF4J binding is added to the classpath.
+
 	* Modified Analyzer.getShadedArtifactSet(File) to search for
 	META-INF/shaded-artifacts before applying heuristics.  Generate
 	META-INF/shaded-artifacts for ganymede-kernel.jar.
